# api-mock

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: api-mock.h  main.cpp
src/arch/unix/: server.cpp
src/arch/win32/: server.cpp
src/controllers/: actioncontroller.cpp  actioncontroller.h  controller.cpp  controller.h  dashboardcontroller.cpp  dashboardcontroller.h  rootcontroller.cpp  rootcontroller.h
src/core/: exceptions.cpp  exceptions.h  incomingrequest.h  server.h
src/http/: RequestParser.h  httpserver.cpp  httpserver.h  mimetypes.h  requestdata.h  requestparser.cpp  requestparser.h  resourcestrategy.h  responsedata.h  responseserializer.cpp  responseserializer.h  staticresourcestrategy.cpp  staticresourcestrategy.h  statuscodes.h
src/infrastructure/: contentservice.h  exceptions.cpp  exceptions.h  filecontentservice.cpp  filecontentservice.h
src/ioc/: ioc.h
src/routing/: config.cpp  config.h  routedictionary.cpp  routedictionary.h  routedresourcestrategy.cpp  routedresourcestrategy.h  routeregistry.h  routingtemplate.cpp  routingtemplate.h
src/serialization/: result.cpp  result.h
src/www/: dashboard.html
src/www/app/: index.html
test/: CMakeLists.txt
test/src/: main.cpp  mimetests.cpp  rootcontrollertests.cpp  routingtests.cpp
test/src/mocks/: contentstub.cpp  contentstub.h
test/t-unit/: console-colours.h  console-report.h  html-report.h  t-unit.h  tap-report.h
www/: CMakeLists.txt  bower.json  karma.conf.js
www/app/: app.css  app.js  index.html
www/app/templates/: addroute.html  endpoints.html  overview.html
www/test/: Tests.js
